describe the version

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 body {
-	text-align: ceneter;
+	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left; 3%;
-	padding-right: 3%
+	padding-left: 3%;
+	padding-right: 3%;
+	background-color: pink;
+}
+
+h2,dl, ol, ul{
+
+	text-align: left;
+}
+dt {
+	font-weight: bold;
+	text-align: 20px;
 }
